--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Der Wacholderexpress fährt ab</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>Hier findet ihr den Kalender</h1>
+        
+        <p><iframe src="https://calendar.google.com/calendar/embed?src=d33f1f936f9fb34f3c2229da207812b9908a31f2fc95fc8e8881eb4bf18f5d60%40group.calendar.google.com&ctz=Europe%2FBerlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
+        
+    </body>
+</html>
