--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
             backgroundimage: src="/img/backgroung.jpg";
         }
         .header {
-        background-image: url("startransparent.gif"), url("catfront.png");
         background-color: transparent;
         }
         <div>
-           <p class="header">Hier findet ihr den Kalender</p>
-        </div>
-        <p><iframe src="https://calendar.google.com/calendar/embed?src=d33f1f936f9fb34f3c2229da207812b9908a31f2fc95fc8e8881eb4bf18f5d60%40group.calendar.google.com&ctz=Europe%2FBerlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
-        
+            <p class="header">Hier findet ihr den Kalender</p>
+            <p <iframe src="https://calendar.google.com/calendar/embed?src=d33f1f936f9fb34f3c2229da207812b9908a31f2fc95fc8e8881eb4bf18f5d60%40group.calendar.google.com&ctz=Europe%2FBerlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
     </body>
 </html>
 
